refactor(fare): controller 를 제회한 클래스들의 이름을 수정했다.