@@ -1,7 +1,7 @@
 package nextstep.subway.unit.fare.application;
 
 import static nextstep.Fixtures.*;
-import static nextstep.subway.fare.application.SurchargePolicyService2.*;
+import static nextstep.subway.fare.application.SurchargePolicyService.*;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.BDDMockito.given;
 
@@ -10,11 +10,11 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
 import nextstep.member.domain.Member;
-import nextstep.subway.fare.application.FareCalculator2;
-import nextstep.subway.fare.application.SurchargePolicyService2;
+import nextstep.subway.fare.application.FareCalculator;
+import nextstep.subway.fare.application.SurchargePolicyService;
 import nextstep.subway.fare.domain.*;
-import nextstep.subway.line.domain.Line2;
-import nextstep.subway.path.domain.Path2;
+import nextstep.subway.line.domain.Line;
+import nextstep.subway.path.domain.Path;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -28,22 +28,22 @@ import org.mockito.junit.jupiter.MockitoExtension;
 @DisplayName("요금 계산기 단위 테스트")
 @SuppressWarnings("NonAsciiCharacters")
 @ExtendWith(MockitoExtension.class)
-class FareCalculatorTest2 {
-  @Mock private SurchargePolicyService2 surchargePolicyService;
-  @InjectMocks private FareCalculator2 fareCalculator;
+class FareCalculatorTest {
+  @Mock private SurchargePolicyService surchargePolicyService;
+  @InjectMocks private FareCalculator fareCalculator;
 
   @DisplayName("요금 계산")
   @ParameterizedTest
   @MethodSource
   void calculateFare(int distance, int expectedFare) {
     Member adult = aMember().build();
-    Path2 path =
-        Path2.of(Arrays.asList(교대역(), 강남역(), 양재역()), List.of(이호선2(), 삼호선2()), distance, 10);
+    Path path =
+        Path.of(Arrays.asList(교대역(), 강남역(), 양재역()), List.of(이호선2(), 삼호선2()), distance, 10);
     given(surchargePolicyService.loadPolicy())
         .willReturn(
-            new OverlappedSurchargePolicy2(
-                new DistanceSurchargePolicy2(10L, 50L, OVERCHARGE_PER_5KM, DISTANCE_5KM),
-                new DistanceSurchargePolicy2(
+            new OverlappedSurchargePolicy(
+                new DistanceSurchargePolicy(10L, 50L, OVERCHARGE_PER_5KM, DISTANCE_5KM),
+                new DistanceSurchargePolicy(
                     50L, Long.MAX_VALUE, OVERCHARGE_PER_8KM, DISTANCE_8KM)));
 
     long fare = fareCalculator.calculateFare(path, adult);
@@ -74,13 +74,13 @@ class FareCalculatorTest2 {
   @MethodSource
   void calculateFareYouth(int distance, int expectedFare) {
     Member youth = aMember().age(13).build();
-    Path2 path =
-        Path2.of(Arrays.asList(교대역(), 강남역(), 양재역()), List.of(이호선2(), 삼호선2()), distance, 10);
+    Path path =
+        Path.of(Arrays.asList(교대역(), 강남역(), 양재역()), List.of(이호선2(), 삼호선2()), distance, 10);
     given(surchargePolicyService.loadPolicy())
         .willReturn(
-            new OverlappedSurchargePolicy2(
-                new DistanceSurchargePolicy2(10L, 50L, OVERCHARGE_PER_5KM, 5L),
-                new DistanceSurchargePolicy2(50L, Long.MAX_VALUE, OVERCHARGE_PER_8KM, 8L)));
+            new OverlappedSurchargePolicy(
+                new DistanceSurchargePolicy(10L, 50L, OVERCHARGE_PER_5KM, 5L),
+                new DistanceSurchargePolicy(50L, Long.MAX_VALUE, OVERCHARGE_PER_8KM, 8L)));
 
     long fare = fareCalculator.calculateFare(path, youth);
 
@@ -110,13 +110,13 @@ class FareCalculatorTest2 {
   @MethodSource
   void calculateFareChild(int distance, int expectedFare) {
     Member child = aMember().age(6).build();
-    Path2 path =
-        Path2.of(Arrays.asList(교대역(), 강남역(), 양재역()), List.of(이호선2(), 신분당선2()), distance, 10);
+    Path path =
+        Path.of(Arrays.asList(교대역(), 강남역(), 양재역()), List.of(이호선2(), 신분당선2()), distance, 10);
     given(surchargePolicyService.loadPolicy())
         .willReturn(
-            new OverlappedSurchargePolicy2(
-                new DistanceSurchargePolicy2(10L, 50L, OVERCHARGE_PER_5KM, 5L),
-                new DistanceSurchargePolicy2(50L, Long.MAX_VALUE, OVERCHARGE_PER_8KM, 8L)));
+            new OverlappedSurchargePolicy(
+                new DistanceSurchargePolicy(10L, 50L, OVERCHARGE_PER_5KM, 5L),
+                new DistanceSurchargePolicy(50L, Long.MAX_VALUE, OVERCHARGE_PER_8KM, 8L)));
 
     long fare = fareCalculator.calculateFare(path, child);
 
@@ -149,10 +149,10 @@ class FareCalculatorTest2 {
             1L, 900,
             2L, 1000);
     given(surchargePolicyService.loadPolicy())
-        .willReturn(new LineSurchargePolicy2(lineIdToSurcharge));
+        .willReturn(new LineSurchargePolicy(lineIdToSurcharge));
 
-    List<Line2> lines = List.of(aLine2().id(1L).build(), aLine2().id(2L).build());
-    Path2 path = Path2.of(Arrays.asList(교대역(), 강남역(), 양재역()), lines, 10, 10);
+    List<Line> lines = List.of(aLine2().id(1L).build(), aLine2().id(2L).build());
+    Path path = Path.of(Arrays.asList(교대역(), 강남역(), 양재역()), lines, 10, 10);
 
     Member adult = aMember().build();
 
